# koca

./: .dockerignore  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Justfile  LICENSE  PROGRESS.md  README.md  claude-code.koca  demo.koca  go.mod  go.sum  hello-world.koca  install.sh  justfile  koca-example.koca  koca.koca  release-plz.toml  valgrind-dep.koca
.github/: release-pr-body.md
.github/workflows/: ci.yml  pr-title.yml  publish.yml  release-rust.yml  release-tag.yml  release.yml
cmd/: koca.go
crates/backends/alpm/: Cargo.toml
crates/backends/alpm/src/: handler.rs  main.rs
crates/backends/apt/: Cargo.toml
crates/backends/apt/src/: download.rs  handler.rs  main.rs
crates/cli/: Cargo.toml
crates/cli/src/: build.rs  cli.rs  create.rs  dirs.rs  discover.rs  error.rs  http.rs  main.rs
crates/cli/src/bins/: mod.rs  nfpm.rs  yq.rs
crates/cli/src/components/: mod.rs  output_gutter.rs  progress_bar.rs  spinner.rs
crates/cli/src/handler/: mod.rs  plain.rs  sudo.rs  tui.rs
crates/cli/src/internal/: mod.rs  package.rs
crates/cli/src/tui/: mod.rs  render.rs  ui.rs  viewport.rs
crates/koca/: Cargo.toml
crates/koca/src/: backend.rs  dep.rs  distro.rs  error.rs  file.rs  handler.rs  init.rs  lib.rs  nfpm.rs  pm.rs  resolve.rs
crates/koca/src/backend/: alpm.rs  error.rs  mod.rs  transport.rs  types.rs
crates/koca/src/backend/apt/: download.rs  mod.rs
crates/koca/src/file/: arch.rs  mod.rs  parser.rs  version.rs
crates/koca/src/source/: fetch.rs  mod.rs
crates/koca/tests/: parse.rs
crates/koca/tests/fixtures/: provides-range.koca  relationships.koca
crates/nfpm-sys/: Cargo.toml  LICENSE  build.rs
crates/nfpm-sys/src/: lib.rs
crates/nfpm-sys/src/go/: .gitignore  go.mod  go.sum  main.go
crates/proto/: Cargo.toml
crates/proto/src/: error.rs  lib.rs  transport.rs  types.rs
internal/env/: env.go
internal/errors/: errors.go
internal/logging/: logging.go
npm/cli/: LICENSE  README.md  package.json
npm/cli/scripts/: postinstall.js
pkg/runner/: build.go  package.go
pkg/syntax/: arch.go  build_file.go  version.go
pkg/syntax/literals/: literals.go
src/: cli.rs  lib.rs  main.rs
