[workspace]
resolver = "2"
members = ["crates/koca", "crates/cli", "crates/nfpm-sys"]

[workspace.package]
version = "0.1.8"
edition = "2021"
repository = "https://github.com/koca-build/koca"

[workspace.dependencies]
anyhow = "1.0.98"
brush = { package = "brush-core", version = "=0.3.2" }
brush-parser = "=0.2.17"
clap = { version = "4.5.37", features = ["derive", "env"] }
directories = "6.0.0"
flate2 = "1.1.2"
koca = { path = "crates/koca", version = "0.1.8" }
nfpm-sys = { path = "crates/nfpm-sys" }
semver = "1.0.26"
thiserror = "2.0.12"
tar = "0.4.44"
tokio = "1.45.0"
zolt = "0.7.2"
regex = "1.11.1"
reqwest = { version = "0.12.19", default-features = false, features = [
    "rustls-tls",
] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
nix = { version = "0.29", features = ["user"] }
walkdir = "2.5.0"
