[workspace]
resolver = "2"
members = [
    "crates/koca",
    "crates/cli",
]

[workspace.package]
version = "0.5.0"
edition = "2021"
repository = "https://github.com/koca-build/koca"

[workspace.dependencies]
anyhow = "1.0.98"
brush = { package = "brush-core", version = "=0.4.0" }
brush-builtins = "0.1.0"
brush-parser = "=0.3.0"
clap = { version = "4.5.37", features = ["derive", "env"] }
directories = "6.0.0"
flate2 = "1.1.2"
koca = { path = "crates/koca", version = "0.5.0" }
rfpm = "0.2.0"
semver = "1.0.26"
thiserror = "2.0.12"
tar = "0.4.44"
tokio = { version = "1.45.0", features = ["full"] }
repology = "0.1.1"
zolt = "0.7.2"
regex = "1.11.1"
reqwest = { version = "0.12.19", default-features = false, features = [
    "rustls-tls",
] }
sha1 = "0.10.6"
sha2 = "0.10.9"
md-5 = "0.10.6"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
nix = { version = "0.29", features = ["user", "term"] }
walkdir = "2.5.0"
interprocess = { version = "2", features = ["tokio"] }
libversion = "0.3.1"
ratatui = "0.30"
crossterm = "0.29"
alpm-common = "0.2.1"
alpm-compress = "0.1.3"
alpm-db = "0.2.2"
alpm-repo-db = "0.1.2"
alpm-types = "0.11.2"
bzip2 = { version = "0.6.0", features = ["static"] }
liblzma = { version = "0.4.1", features = ["static"] }
