[package]
name = "cli"
version.workspace = true
edition.workspace = true
description = "The Koca command-line interface (CLI) tool"
license-file = "../../LICENSE"
readme = "../../README.md"
repository.workspace = true

[[bin]]
name = "koca"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
directories = { workspace = true }
flate2 = { workspace = true }
koca = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
zolt = { workspace = true }
