[package]
name = "cli"
version.workspace = true
edition.workspace = true
description = "The Koca command-line interface (CLI) tool"
license-file = "../../LICENSE"
readme = "../../README.md"
repository.workspace = true

[[bin]]
name = "koca"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
async-trait.workspace = true
clap = { workspace = true }
crossterm = { workspace = true }
directories = { workspace = true }
flate2 = { workspace = true }
iocraft = { workspace = true }
koca = { workspace = true }
portable-pty = { workspace = true }
terminput = { workspace = true }
terminput-crossterm = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
tar = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
zolt = { workspace = true }

[target.'cfg(unix)'.dependencies]
nix = { workspace = true }
