[package]
name = "koca"
version.workspace = true
edition.workspace = true
description = "The Koca library"
license-file = "../../LICENSE"
readme = "../../README.md"
repository.workspace = true

[dependencies]
brush = { workspace = true }
brush-parser = { workspace = true }
itertools = "0.14.0"
nfpm-cgo = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
walkdir = { workspace = true }
