[package]
name = "koca"
version.workspace = true
edition.workspace = true
description = "The Koca library"
license-file = "../../LICENSE"
readme = "../../README.md"
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
brush = { workspace = true }
brush-builtins = { workspace = true }
brush-parser = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
git2 = { workspace = true }
interprocess = { workspace = true }
itertools = "0.14.0"
libversion = { workspace = true }
md-5 = { workspace = true }
nix = { workspace = true }
reqwest = { workspace = true }
mailparse = { workspace = true }
rfpm = { workspace = true }
spdx = { workspace = true }
semver = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
tar = { workspace = true }
tempfile = "3.27.0"
thiserror = { workspace = true }
tokio = { workspace = true }
walkdir = { workspace = true }
fakeroost = "0.1.1"

[dev-dependencies]
tokio = { workspace = true }
