[package]
name = "koca-proto"
version.workspace = true
edition.workspace = true
license = "MIT"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
interprocess = { workspace = true }
