[package]
name = "koca-backend-alpm"
version.workspace = true
edition.workspace = true
description = "Arch Linux backend for Koca"
license = "GPL-3.0"

[[bin]]
name = "koca-backend-alpm"
path = "src/main.rs"

[dependencies]
koca-proto = { workspace = true }
alpm = "5.0.2"
alpm-utils = "5.0.0"
pacmanconf = "3.1.0"
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
