[package]
name = "koca-backend-pacman"
version.workspace = true
edition.workspace = true
description = "Arch Linux backend for Koca"
license = "GPL-3.0"

[[bin]]
name = "koca-backend-pacman"
path = "src/main.rs"

[dependencies]
koca-proto = { workspace = true }
alpm-db = { workspace = true }
alpm-repo-db = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
flate2 = { workspace = true }
nix = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
tar = { workspace = true }
tokio = { workspace = true }
