[package]
name = "koca-backend-apt"
version.workspace = true
edition.workspace = true
description = "APT backend for Koca"
license = "GPL-3.0"

[[bin]]
name = "koca-backend-apt"
path = "src/main.rs"

[dependencies]
koca-proto = { workspace = true }
rust-apt = "0.9.0"
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
