[package]
name = "koca-backend-apt"
version.workspace = true
edition.workspace = true
description = "APT backend for Koca"
license = "GPL-3.0"

[[bin]]
name = "koca-backend-apt"
path = "src/main.rs"

[dependencies]
koca-proto = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
nix = { workspace = true }
reqwest = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
md-5 = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
